Opened 9 years ago

Closed 8 years ago

#6854 closed defect (fixed)

filter_complex hangs on broken input

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: deadlock regression
Cc: Marton Balint Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://ffmpeg.org/pipermail/ffmpeg-user/2017-November/037955.html
Regression since 76e13bdeaabc7ec49322b3a118dc4805153e0401

$ ffmpeg -i fate-suite/lena.pnm -i broken.pgm -filter_complex overlay -f null -
ffmpeg version N-89191-g152902f Copyright (c) 2000-2017 the FFmpeg developers
  built with gcc 6.3.0 (GCC)
  configuration: --enable-gpl
  libavutil      56.  0.100 / 56.  0.100
  libavcodec     58.  3.105 / 58.  3.105
  libavformat    58.  2.102 / 58.  2.102
  libavdevice    58.  0.100 / 58.  0.100
  libavfilter     7.  2.100 /  7.  2.100
  libswscale      5.  0.101 /  5.  0.101
  libswresample   3.  0.101 /  3.  0.101
  libpostproc    55.  0.100 / 55.  0.100
Input #0, ppm_pipe, from 'fate-suite/lena.pnm':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: ppm, rgb24, 256x256, 25 tbr, 25 tbn, 25 tbc
Input #1, pgm_pipe, from 'broken.pgm':
  Duration: N/A, bitrate: N/A
    Stream #1:0: Video: pgm, gray, 256x256, 25 tbr, 25 tbn, 25 tbc
Stream mapping:
  Stream #0:0 (ppm) -> overlay:main
  Stream #1:0 (pgm) -> overlay:overlay
  overlay -> Stream #0:0 (wrapped_avframe)
Press [q] to stop, [?] for help
Error while decoding stream #1:0: Invalid data found when processing input
frame=    0 fps=0.0 q=0.0 size=N/A time=-577014:32:22.77 bitrate=N/A speed=N/A

Attachments (1)

broken.pgm (63.5 KB ) - added by Carl Eugen Hoyos 9 years ago.

Download all attachments as: .zip

Change History (2)

by Carl Eugen Hoyos, 9 years ago

Attachment: broken.pgm added

comment:1 by Marton Balint, 8 years ago

Cc: Marton Balint added
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.